# tuneo

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
app/: layout.tsx
apps/android/: settings.gradle.kts
apps/desktop-linux/: Cargo.toml
apps/web/: next.config.js  package.json
components/: Box.tsx  Library.tsx  Sidebar.tsx  SidebarItem.tsx
services/python-ml-trainer/: pyproject.toml
services/python-ml-trainer/src/: train.py
services/rust-audio-engine/: Cargo.toml
services/rust-audio-engine/src/: main.rs
