[project]
name = "tuneo-ml-trainer"
version = "0.1.0"
description = "Tuneo ML Model Training Service"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]