[package]
name = "rust-audio-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# Async
futures = "0.3.31"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Audio processing (to be added as needed)
# hound = "3.5"  # WAV file I/O
# chromaprint = "0.1"  # Audio fingerprinting
# rubato = "0.14"  # Sample rate conversion

[dev-dependencies]